# synergy-sc-ae

./: .gitignore  README.md
characterization/: README.md  process_syclbench.sh  run_syclbench.sh
characterization/passes/: .clang-format  .gitignore
characterization/passes/cmake/: FindFLINT.cmake
characterization/postprocess/: extract.py  plot.py  separate.py
characterization/sycl-bench/: .gitignore  CMakeLists.txt
characterization/sycl-bench/include/: prefetched_buffer.h
characterization/sycl-bench/scripts/: edp_ed2p_plot.py
characterization/sycl-bench/single-kernel/: ftle.cpp  kmeans.cpp  knn.cpp  lin_reg_error.cpp  matrix_mul.cpp  matrix_transpose_local_mem.cpp  merse_twister.cpp  mol_dyn.cpp  nbody_local_mem.cpp  vec_add.cpp
energy-scaling/: README.md  extract_features.sh  plot.sh  predict.sh
energy-scaling/cloverLeaf/: cloverleaf-wsjob-freq.sh  generate.py  launch-cloverleaf-freq.sh  parse.py  plot.py  plot.sh  predict.py  v100-launch.sh
energy-scaling/cloverLeaf/cloverLeafApp/: CMakeLists.txt
energy-scaling/miniWeather/: generate.py  launch-miniweather-freq.sh  miniweather-wsjob-freq.sh  parse.py  plot.py  plot.sh  predict.py  v100-launch.sh
energy-scaling/miniWeather/miniWeatherApp/: .gitmodules
energy-scaling/miniWeather/miniWeatherApp/cpp/: CMakeLists.txt  miniWeather_mpi_parallelfor.cpp  miniWeather_mpi_parallelfor_simd_x.cpp
energy-scaling/miniWeather/miniWeatherApp/cpp/YAKL/: .gitmodules  CMakeLists.txt  yakl_utils.cmake
energy-scaling/miniWeather/miniWeatherApp/cpp/YAKL/SYnergy/include/: profiling.hpp  queue.hpp
energy-scaling/miniWeather/miniWeatherApp/cpp/YAKL/SYnergy/samples/matrix_mul/: matrix_mul.cpp
energy-scaling/miniWeather/miniWeatherApp/cpp/YAKL/SYnergy/samples/saxpy/: saxpy.cpp
energy-scaling/miniWeather/miniWeatherApp/cpp/YAKL/src/: YAKL_header.h  YAKL_parallel_for_common.h  YAKL_streams_events.h  YAKL_sycldevice.h
energy-scaling/miniWeather/miniWeatherApp/cpp/scripts/: build.sh
energy-scaling/passes/examples/: pass_OpenCL.sh
energy-scaling/passes/feature-pass/: CMakeLists.txt
energy-scaling/passes/feature-pass/include/: DefaultFeatureAnalysis.hpp  Kofler13Analysis.hpp
energy-scaling/passes/feature-pass/include/polfeat/: PolFeatAnalysis.hpp
energy-scaling/passes/feature-pass/src/: Kofler13Analysis.cpp
marconi100-scripts/: bench-job.sh  cloverleaf-ssjob-freq.sh  cloverleaf-ssjob.sh  cloverleaf-wsjob-freq.sh  cloverleaf-wsjob.sh  job.sh  launch-cloverleaf-freq.sh  launch-cloverleaf.sh  launch-ligen.sh  launch-miniweather-freq.sh  launch-miniweather.sh  launch.sh  ligen-job.sh  miniweather-ssjob-freq.sh  miniweather-ssjob.sh  miniweather-wsjob-freq.sh  miniweather-wsjob.sh  module_env.sh  prova.sh  test.sh
models-validation/: README.md  models.py  validate.sh
models-validation/provided-data/testing-data/: BitCompression.csv  BlackScholes.csv  BoxBlur.csv  ES_PL_metrics_freq_measurement.csv  Ftle.csv  Geometricmean.csv  Kmeans_fp32.csv  Kmeans_fp64.csv  Knn.csv  LinearRegression_fp32.csv  LinearRegression_fp64.csv  Matrix_mul.csv  Matrix_transpose.csv  MedianFilter.csv  MerseTwister.csv  MolecularDynamics.csv  Nbody_local_mem.csv  ScalarProduct_NDRange_fp32.csv  Sinewave.csv  Sobel3.csv  Sobel5.csv  Sobel7.csv  Spmv.csv  VectorAddition_fp32.csv  VectorAddition_fp64.csv  VectorAddition_int32.csv  VectorAddition_int64.csv
models-validation/provided-data/training-data/: merged_ArithLocalMixed.csv  merged_ArithMixedUnitOp.csv  merged_ArithMixedUnitType.csv  merged_ArithSingleUnit.csv  merged_GlobalMemory.csv  merged_GlobalMemory2.csv  merged_L2Unit.csv  merged_LocalMemory.csv  merged_Stencil.csv
scaling/bitcode/cloverleaf/: PdV.bc  accelerate.bc  advec_cell.bc  advec_mom.bc  advection.bc  build_field.bc  calc_dt.bc  clover_leaf.bc  comms.bc  field_summary.bc  flux_calc.bc  generate_chunk.bc  hydro.bc  ideal_gas.bc  initialise.bc  initialise_chunk.bc  pack_kernel.bc  read_input.bc  report.bc  reset_field.bc  revert.bc  start.bc  timer.bc  timestep.bc  update_halo.bc  update_tile_halo.bc  update_tile_halo_kernel.bc  viscosity.bc  visit.bc
scaling/bitcode/miniweather/: miniWeather_mpi_parallelfor.bc
testing-dataset/: README.md  extract_features.sh  process_syclbench.sh  run_syclbench.sh  run_syclbench_cluster.sh  syclbench_job.sh
testing-dataset/passes/examples/: extract_Bitcode.sh
testing-dataset/passes/test/: test_impoly.cpp
testing-dataset/postprocess/: extract.py  metrics.py  parse.py  plot.py
testing-dataset/sycl-bench/include/: common.h
testing-dataset/sycl-bench/scripts/: merge_sycl_bench.py  merge_wo_feat.py  separate_kernels.py
testing-dataset/sycl-bench/single-kernel/: bit_compression.cpp  black_scholes.cpp  box_blur.cpp  geometric_mean.cpp  median.cpp  scalar_prod.cpp  sinewave.cpp  sobel.cpp
training/: README.md  process_microbenchmarks.sh  run_microbenchmarks.sh
training-dataset/: README.md  extract_features.sh  microbench_job.sh  process_microbenchmarks.sh  run_microbenchmarks.sh  run_microbenchmarks_cluster.sh
training-dataset/micro/: ArithMixedUnitOp.cpp  GlobalMemory.cpp  GlobalMemory2.cpp  L2Unit.cpp  LocalMemory.cpp
training-dataset/passes/: CMakeLists.txt  README.md
training-dataset/passes/feature-pass/include/: FeatureSet.hpp
training-dataset/passes/feature-pass/src/: FeatureAnalysisPlugin.cpp  PolFeatAnalysis.cpp
training-dataset/passes/feature-pass/src/feature-sets/: FanFeatureSet.cpp
training-dataset/sycl-bench/: CMakeLists.txt
training-dataset/sycl-bench/micro-bench-energy/: ArithSingleUnit.cpp  CMakeLists.txt  L2Unit.cpp  LocalMemory.cpp  Stencil.cpp
training-dataset/sycl-bench/scripts/: README.md  add_energy_metrics.py  separate_kernels.py
training/micro/: ArithLocalMixed.cpp  ArithMixedUnitType.cpp  ArithSingleUnit.cpp  ArithSingleUnitUsm.cpp  Stencil.cpp
training/passes/celerity-pass/: CMakeLists.txt  celerity_interface_pass.cpp  celerity_interface_pass.h
training/passes/examples/: pass_SYCL.sh  (+1 more)
training/passes/extractor-tool/: CMakeLists.txt  ExtractorCommandLine.cpp  ExtractorCommandLine.hpp  FeatureTool.cpp
training/postprocess/: merge.py
(+139 files in other folders)
